Fri Nov 21 08:55:16 2003 Charlie Frasch  <cfrasch@atdesk.com>
  
	* utils/wxNamingViewer/Makefile:
	* utils/wxNamingViewer/README:
	* utils/wxNamingViewer/mondrian.xpm:
	* utils/wxNamingViewer/wxAddNameServerDlg.cpp:
	* utils/wxNamingViewer/wxBindDialog.cpp:
	* utils/wxNamingViewer/wxBindDialog.h:
	* utils/wxNamingViewer/wxBindNewContext.cpp:
	* utils/wxNamingViewer/wxNamingObject.cpp:
	* utils/wxNamingViewer/wxNamingTree.cpp:
	* utils/wxNamingViewer/wxNamingViewer.cpp:
	* utils/wxNamingViewer/wxNamingViewerFrame.cpp:
	* utils/wxNamingViewer/wxSelectNSDialog.cpp:
	* utils/wxNamingViewer/wxViewIORDialog.cpp:
	  Updated for linux, gcc, latest ACE/TAO and wxWindows 2.4.2. For 
	  linux, the wxNamingViewer.wxr file is no longer used, and the 
	  dialog components are created  inline. A future change should 
	  incorporate wxWindow's new XML-based resource system.
  
Fri Nov 21 02:57:35 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * rules.tao.GNU:
          Added IDL_SRC and IDL_OBJ variables.  If you define IDL_SRC in
          your Makefile to be the name of an IDL file (without .idl),
          these variables will automatically contain a list of
          corresponding *.C.h and *S.h, and *C.o and *S.o files
          respectively.  In a related ACE ChangeLog entry with the same
          ChangeLogTag, $(IDL_SRC) was added as a target dependant on the
          IDL_FILES, so if these files are modified, the IDL_SRC will be
          automatically regenerated.  Also, the same ChangeLog entry
          mentioned that $(IDL_SRC) is now alway listed as the first
          dependency in the BUILD variable, so it will alway be generated
          first an no longer constitute a problem for parallel builds.
          Makefiles need do no more than define IDL_FILES and use IDL_SRC
          and IDL_OBJS for this to work.

        * docs/tutorials/Quoter/AMI/Makefile:
        * docs/tutorials/Quoter/Event_Service/Makefile: