@@ -1,3 +1,12 @@
+Fri Nov 21 10:31:38 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/ast/ast_decl.cpp:
+        * TAO_IDL/be/be_typedef.cpp:
+        * TAO_IDL/include/ast_decl.h:
+
+          Fixed error in logic of determining whether a sequence
+          is anonymous or typedef'd.
+
 Fri Nov 21 08:55:16 2003 Charlie Frasch  <cfrasch@atdesk.com>
   
 	* utils/wxNamingViewer/Makefile:
